<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:layout_gravity="center">


        <ScrollView
            android:id="@+id/scroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="18dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Create Account"
                        android:fontFamily="sans-serif-medium"
                        android:gravity="center"
                        android:textColor="@color/colorBlack"
                        android:textSize="20sp"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="18dp"
                        android:text="Name"
                        android:textSize="14dp" />

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="36dp">

                        <EditText
                            android:id="@+id/etDisplayName"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="24dp"
                            android:background="@null"
                            android:focusable="true"
                            android:fontFamily="sans-serif"
                            android:hint="@string/etEnterName"
                            android:inputType="textPersonName|textCapSentences"
                            android:isScrollContainer="true"
                            android:maxLength="36"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorBlack" />

                        <ImageView
                            android:id="@+id/imageview"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_father_orange" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.5px"
                        android:layout_marginBottom="8dp"
                        android:background="#dfdfdf"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="Email"
                        android:textSize="14dp" />

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="36dp">

                        <EditText
                            android:id="@+id/etEmail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="24dp"
                            android:background="@null"
                            android:focusable="true"
                            android:fontFamily="sans-serif"
                            android:hint="@string/etEnterEmail"
                            android:inputType="textEmailAddress"
                            android:isScrollContainer="true"
                            android:maxLength="30"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorBlack" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_email_orange" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.5px"
                        android:layout_marginBottom="8dp"
                        android:background="#dfdfdf"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="Contact"
                        android:textSize="14dp" />

                    <LinearLayout
                        android:id="@+id/goLogin"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="35dp"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif"
                            android:gravity="center_vertical"
                            android:text="+91"
                            android:textColor="@color/colorBlack"
                            android:textSize="16dp" />

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="4dp"
                            android:gravity="center_vertical"
                            android:minHeight="36dp">

                            <EditText
                                android:id="@+id/etContact"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="24dp"
                                android:background="@null"
                                android:fontFamily="sans-serif"
                                android:gravity="center_vertical"
                                android:hint="@string/etContactNo"
                                android:inputType="number"
                                android:maxLength="10"
                                android:textColor="@color/colorBlack"
                                android:textColorHint="@color/colorBlack" />

                            <ImageView
                                android:layout_width="20dp"
                                android:layout_height="20dp"
                                android:layout_alignParentRight="true"
                                android:src="@drawable/ic_call_orange" />
                        </RelativeLayout>

                    </LinearLayout>
                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.5px"
                        android:layout_marginBottom="8dp"
                        android:background="#dfdfdf"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="Status"
                        android:textSize="14dp" />

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="36dp">

                        <EditText
                            android:id="@+id/etStatus"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="24dp"
                            android:background="@null"
                            android:focusable="true"
                            android:fontFamily="sans-serif"
                            android:hint="@string/etEnterStatus"
                            android:inputType="textPersonName|textCapSentences"
                            android:isScrollContainer="true"
                            android:maxLength="160"
                            android:singleLine="false"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorBlack" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_email_orange" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.5px"
                        android:layout_marginBottom="8dp"
                        android:background="#dfdfdf"
                        android:visibility="visible" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="6dp"
                        android:text="Password"
                        android:textSize="14dp" />

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:minHeight="36dp">

                        <EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginRight="24dp"
                            android:background="@null"
                            android:focusable="true"
                            android:fontFamily="sans-serif"
                            android:hint="@string/etEnterPassword"
                            android:inputType="textPassword"
                            android:isScrollContainer="true"
                            android:maxLength="12"
                            android:singleLine="true"
                            android:textColor="@color/colorBlack"
                            android:textColorHint="@color/colorBlack" />

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_alignParentRight="true"
                            android:src="@drawable/ic_key" />
                    </RelativeLayout>

                    <View
                        android:layout_width="fill_parent"
                        android:layout_height="1.5px"
                        android:layout_marginBottom="8dp"
                        android:background="#dfdfdf"
                        android:visibility="visible" />



                    <LinearLayout
                        android:id="@+id/createAccount"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"                        android:background="@drawable/gradient_with_selector"
                        android:orientation="vertical"
                        android:layout_marginTop="20dp">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-medium"
                            android:gravity="center"
                            android:padding="11dp"
                            android:text="Create Account"
                            android:textColor="@color/colorWhite"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>


            </RelativeLayout>
        </ScrollView>

</RelativeLayout>
